[package]
name = "rust-api"
version = "0.1.0"
authors = ["Bing Tan"]
edition = "2024"

[dependencies]
torch-sys = { version = "0.20.0" }
tch = { version = "0.20.0"}
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
axum-server = "0.7.2"
