[package]
name = "rust-api"
version = "0.1.0"
authors = ["Bing Tan"]
edition = "2024"

[dependencies]
# --- Inference runtime ---
ort = { version = "2.0.0-rc.10", features = ["coreml"] }   # ONNX Runtime w/ CoreML support (for M-series Mac)         
ndarray = { version = "0.16.1" }                             # For tensor data handling

# --- Web server stack ---
axum = "0.8.4"
axum-server = "0.7.2"
tokio = { version = "1", features = ["full"] }

# --- Serialization / CLI ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }

# --- Error handling ---
anyhow = "1.0"
http = "1.3.1"
parking_lot = "0.12.5"

[dev-dependencies]

